--- a/src/style/index.css
+++ b/src/style/index.css
@@ -18,3 +18,18 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+.header {
+  width: 100%;
+  height: 50px;
+  background-color: black;
+  color: white;
+  display: flex;
+  align-items: center;
+}
+
+.links {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
