--- a/src/style/index.css
+++ b/src/style/index.css
@@ -37,3 +37,20 @@ ul {
 .main-content {
   width: 70%;
 }
+
+.aside-left-about {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 200px;
+  height: 300px;
+  background-color: #f8f9fa;
+  padding: 20px;
+}
+
+.aside-left-about-header {
+  font-weight: bold;
+  font-size: 20px;
+  font-style: italic;
+  margin: 15px 0px;
+}
