--- a/src/style/index.css
+++ b/src/style/index.css
@@ -34,6 +34,10 @@ ul {
   justify-content: space-evenly;
 }
 
+.main {
+  display: flex;
+}
+
 .main-content {
   width: 70%;
 }
@@ -69,4 +73,42 @@ ul {
   font-size: 20px;
   font-style: italic;
   margin: 15px 0px;
+}
+
+.article1 {
+  border: 1px solid gray;
+  width: 50%;
+  height: 48%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.article1-figure {
+  margin: 0px;
+  width: 100%;
+  height: 40%;
+}
+
+.article1-image {
+  width: 100%;
+  height: 100%;
+}
+
+.article1-content {
+  width: 95%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.article1-header {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.article-link {
+  color: #479efe;
 }
