--- a/src/style/index.css
+++ b/src/style/index.css
@@ -39,7 +39,12 @@ ul {
 }
 
 .main-content {
-  width: 70%;
+  width: 800px;
+  height: 680px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .aside-left-about {
@@ -77,27 +82,49 @@ ul {
 
 .article1 {
   border: 1px solid gray;
-  width: 50%;
-  height: 48%;
+  width: 45%;
+  height: 45%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.article1-figure {
-  margin: 0px;
-  width: 100%;
-  height: 40%;
+.article2 {
+  border: 1px solid gray;
+  width: 45%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.article1-image {
+.article3 {
+  border: 1px solid gray;
+  width: 45%;
+  height: 54%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.article-figure {
+  margin: 0px;
+  width: 100%;
+  height: 130px;
+}
+
+.article-image {
   width: 100%;
   height: 100%;
 }
 
+.article-link {
+  color: #479efe;
+}
+
 .article1-content {
   width: 95%;
-  height: 50%;
+  height: 55%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -109,6 +136,30 @@ ul {
   margin-top: 20px;
 }
 
-.article-link {
-  color: #479efe;
+.article2-content {
+  width: 95%;
+  height: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.article2-header {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.article3-content {
+  width: 95%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.article3-header {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
 }
