--- a/src/style/index.css
+++ b/src/style/index.css
@@ -36,6 +36,8 @@ ul {
 
 .main {
   display: flex;
+  justify-content: space-evenly;
+  margin: 20px auto;
 }
 
 .main-content {
@@ -45,6 +47,12 @@ ul {
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-content: center;
+}
+
+.aside-left {
+  width: 240px;
+  padding-left: 40px;
 }
 
 .aside-left-about {
@@ -96,6 +104,7 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: 15px;
 }
 
 .article3 {
@@ -122,8 +131,14 @@ ul {
   color: #479efe;
 }
 
+.article1-content,
+.article2-content,
+.article3-content {
+  width: 360px;
+  padding: 0px 15px;
+}
+
 .article1-content {
-  width: 95%;
   height: 55%;
   display: flex;
   flex-direction: column;
@@ -137,7 +152,6 @@ ul {
 }
 
 .article2-content {
-  width: 95%;
   height: 75%;
   display: flex;
   flex-direction: column;
@@ -151,7 +165,6 @@ ul {
 }
 
 .article3-content {
-  width: 95%;
   height: 60%;
   display: flex;
   flex-direction: column;
@@ -162,4 +175,55 @@ ul {
   font-size: 20px;
   font-weight: bold;
   margin-top: 20px;
+}
+
+.aside-login {
+  width: 240px;
+  height: 680;
+  padding-right: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.login-panel {
+  background-color: #f5f5f5;
+  width: 200px;
+  height: 180px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-content: center;
+}
+
+.login-panel-input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login-panel-input-text-email,
+.login-panel-input-text-password {
+  height: 40px;
+  border: 1px solid #edeff1;
+}
+
+.login-panel-input-text-password {
+  border-top: 0px;
+}
+
+.login-panel-input-sign-in {
+  text-align: center;
+}
+
+.login-panel-input-remember-me {
+  margin-top: 10px;
+}
+
+.login-panel-input-sign-in-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  width: 150px;
+  height: 30px;
 }
