--- a/src/style/index.css
+++ b/src/style/index.css
@@ -227,3 +227,14 @@ ul {
   width: 150px;
   height: 30px;
 }
+
+.copyright-info {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f9f9f9;
+  color: #bcbcbc;
+}
